# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-vcs/ChangeLog,v 1.193 2015/04/11 08:18:50 ulm Exp $

  11 Apr 2015; Ulrich Müller <ulm@gentoo.org> -emacs-vcs-24.4.90-r1.ebuild,
  -emacs-vcs-24.4.91.ebuild:
  Remove pretest versions.

*emacs-vcs-25.0.50_pre20150331 (05 Apr 2015)

  05 Apr 2015; Ulrich Müller <ulm@gentoo.org>
  +emacs-vcs-25.0.50_pre20150331.ebuild:
  New snapshot of trunk.

  31 Mar 2015; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.4.90-r1.ebuild,
  emacs-vcs-24.4.91.ebuild, emacs-vcs-24.5.9999.ebuild,
  emacs-vcs-25.0.50_pre20150131.ebuild, emacs-vcs-25.0.50_pre20150228.ebuild,
  emacs-vcs-25.0.9999-r1.ebuild:
  Update dependency after package move of eselect modules to app-eselect.

*emacs-vcs-24.5.9999 (29 Mar 2015)

  29 Mar 2015; Ulrich Müller <ulm@gentoo.org> -emacs-vcs-24.4.9999-r2.ebuild,
  +emacs-vcs-24.5.9999.ebuild:
  Upstream has changed version number of emacs-24 branch to 24.5.

*emacs-vcs-24.4.91 (08 Mar 2015)

  08 Mar 2015; Ulrich Müller <ulm@gentoo.org> +emacs-vcs-24.4.91.ebuild:
  New pretest version.

*emacs-vcs-25.0.50_pre20150228 (01 Mar 2015)

  01 Mar 2015; Ulrich Müller <ulm@gentoo.org>
  -emacs-vcs-25.0.50_pre20141110.ebuild, -emacs-vcs-25.0.50_pre20141231.ebuild,
  +emacs-vcs-25.0.50_pre20150228.ebuild:
  New snapshot of trunk. Remove old.

  28 Feb 2015; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.4.90-r1.ebuild,
  emacs-vcs-25.0.50_pre20150131.ebuild, emacs-vcs-25.0.9999-r1.ebuild:
  Update version of emacs-common-gentoo dependency.

*emacs-vcs-24.4.90-r1 (21 Feb 2015)

  21 Feb 2015; Ulrich Müller <ulm@gentoo.org> -emacs-vcs-24.4.90.ebuild,
  +emacs-vcs-24.4.90-r1.ebuild, emacs-vcs-25.0.50_pre20150131.ebuild,
  emacs-vcs-25.0.9999-r1.ebuild:
  Follow QA policy for game state directory, bug 537580.

*emacs-vcs-24.4.90 (17 Feb 2015)

  17 Feb 2015; Ulrich Müller <ulm@gentoo.org> +emacs-vcs-24.4.90.ebuild: