@@ -4,24 +4,24 @@ Hash: SHA256
 DIST emacs-25.0.50_pre20150131.tar.xz 24719944 SHA256 fa21415c14d724c6cbd92ea8b76bfbc157757baf1446492b5f72062ff0017076 SHA512 85629851ba93d25050e0590b8c00ea9417e2c6839d306276ec3f02ce4d6bba14fe407f32eb07dcc2d42c79fade0678e9e5c098cf1562831a0a715373629a9d40 WHIRLPOOL e58589ac54577800e971232e814212b2954c93c42d701c137283590833420680968f71b46c6e087c4b3d900f96fb1c99edc6420ffbd336740e9b079e01e9ef4a
 DIST emacs-25.0.50_pre20150228.tar.xz 24749116 SHA256 8e442cbb27e0b39aee9ebcd981512870a7030ecdd4f7941c3ea43dfbb0635635 SHA512 a9f3f3fe5bb2d662c06317c630af40c48b47b33f5cfdbc2a3fa592ac27cb9b9e1c91524326def931b931fc4a35056bac45b7836e24e550088965783dad2c3188 WHIRLPOOL 9349f8f94873a2addc75af295852434a6609bc88f2acb9ef45b24947a8d5f2b058b2e3a0d461eb2ce34816b4895225fdbd939c4ed366608949ca13c354a74185
 DIST emacs-25.0.50_pre20150331.tar.xz 24800328 SHA256 b6aea078e1bc8453ce9242d30b5ab1167c72961f0f3a6a3472bae8cde8dfa193 SHA512 9f169ab06597a0fcfdc3854f42ea48adcfe6de7fb43dd2d3af24dae1ccf7bb8ff0df78ebe256a59089152ee95549170d854a90d2b0040e6518de3072cb833482 WHIRLPOOL d75319210586c40117527b5f091d52904397739d56888744e61ffd703a6465bd04dae9632b9e80b2692c4446aa27ade34a9509a523e038b76581dfa8dbb24084
-EBUILD emacs-vcs-24.5.9999.ebuild 11578 SHA256 02b70de7b2d4335a5f1e1c13b361e4d33de5c1725b5a625122a656794f5e3c6c SHA512 545db251e980755c57514fb4747eb81792aee4be9aeb56e85f60d5706ec48ea91831986f1903304a64f5d1bb5a6ebc982b32e295107d8c2ba570260265e89508 WHIRLPOOL ede95769339d56593a8ff8df0a7a25238d290390363fa111d5b0aa3f75d9d186522f200aef56181088be5a1bb74932f10a176dfb9da6d4a79f2559cd8ce33e41
+EBUILD emacs-vcs-24.5.9999.ebuild 11455 SHA256 8f56e0ed310062b73ecae06274902dcb505024f62b815d4043dd9a1123c035a6 SHA512 53353b52731e035e39e169024f277b4a6e6c7103e9385026aabed9c76f10ea2a0e76e45806724709d2c8851bac55d6d2d4ff707954a07395dba5c7be1cf60739 WHIRLPOOL 39458ff23e4a5a35385df43f07dc1c7eee784d55b218e0914d14202e1069741e94731fa3b51c74c0771022d2b16ce810374254fb14200fc7790ed6f6379990b3
 EBUILD emacs-vcs-25.0.50_pre20150131.ebuild 11464 SHA256 9b7be4e654099ad2628f0f0dc95c3e24d95b30135bd7674c754b394e70adc035 SHA512 ee6533cc59abd47845c644dfab1dbd8b1b9ac9f8832404b83d85e27e50019bda358e45211e1e35e051dc20a9e1d53500a4e4757e475c5a184db3cb13a9c53e0f WHIRLPOOL a8b7ccfdfc1ca0efb4ad353194b658fa0c06d7b359306cb9f874db066ad422e0d6e569f1c638b936957ab0ab0684bb8df447ce21786dd97201565a7c9ca448d5
 EBUILD emacs-vcs-25.0.50_pre20150228.ebuild 11464 SHA256 a11fcd3be8a79db2645f9e6f4a9b84c2a792fce0f8a02d9c43728e92d4763e76 SHA512 10379f8e7a3481f72298a2bd89eb8983c732090297d72bfe5b60c6138d28e5bfaa1315d1506ae4ce7da52bf74493023ac70c6f13061ebfbcb47a3746fc8d354e WHIRLPOOL 62a20d8ac96f01fe9041407343eb88f8f9be2227a56f101b14859c6ca624b66c79554d7e06dd4e7a0a43c4e6bdfdaeb5c49765bb10612644f86138185a01be47
 EBUILD emacs-vcs-25.0.50_pre20150331.ebuild 11464 SHA256 a97b81a04655781c4c0df245ea34713842da481d39a646127a8dc8733435bd7a SHA512 d892f5e8ba489008e8dbe50cb510fcf20c28fe2da4f326cdddce9517eed80d999e13b8cb1269eba10abb74e66fc5dde410b2d282ec2ba0ad964e4b247c11efc9 WHIRLPOOL 2b37516abf6c1111ed47e06675b14bb73800c2c9e749b1fce90aaff9c74ff6db32b3c8fc2e4b11df60984e9308341d1b6f2221504cfbc78df200069bd48e0927
 EBUILD emacs-vcs-25.0.9999-r1.ebuild 11457 SHA256 90371f8ea35c42c140b827ad8e8efe4485464e56ce8a2c5b913c2feea098285e SHA512 e41be3c7cf2bdf87515d51b15e547e1756f9768ddf67fac3475444cfe8a200a40b7542b15dc8327172c883ae26ac283ef4b59800e49e70e96b3373b402286e81 WHIRLPOOL d4ed8701e88f1397c2a12f359683f161ccff6db7ce7b911ceae215a9f14b20d70e943dbb5a0fd7825fa722836d7e44b62817cefe73b4ac9799c67e32ac4d1610
-MISC ChangeLog 84783 SHA256 c6030f224bdb457bb7810e7a790d01543b6eecb0b11f6bcb7b6516fefed282e2 SHA512 486520417041d6ca265dcc65254feb150520cfef962e1f4ac86309d90bf6da2d730e636f06edc6b4df2441206ff592f8b7a6f68cc5b778f83288ba48cee4ebe5 WHIRLPOOL 8747db96f7bd2af10a44a797cad2f188b32457d830c2f6eba73417f0af8c2ddb254744dc01b6ee45e1816e30116479cc4c4805d59e45de27ca5e2b7db83fa763
+MISC ChangeLog 84902 SHA256 13bacddfaa14f5d058d54f0757041547b451e25a5ba3aa508e9a9676e46bb740 SHA512 01b442b15055b2e42c17d014950e66abbbd34fb86cef8b45a29688d95f7a9b94d358891c8d009ccab6fcabfd56e202506a7f1f18c0c9c6c3c8bb50b02f06ffcc WHIRLPOOL e48fabe7e5b5268b3a39a4f0b62041464fb6f2325049f01786e8729efa834563efd8acc711cf7be5584705eb3c98f04a3215197c1ecda53a681658d5e4cad325
 MISC metadata.xml 2489 SHA256 21b3602d37aa25bca31b05ea810b37ee2192f4e53b8f8daeb814d9dca59d03d7 SHA512 4f3d663cd61253ae3390c55c5974dd3cc22dbf1306a823c3cb71794d09eaf28d7727c7e24f66f02dbd8d3845894f3a8cafa5ddaf330c1bbb7f99d8130ece077c WHIRLPOOL bcefdded503fa9cebea943952d3f56847002cb5ddc10f5adbd774301b648d1b12a09da7e493694f9cbbb19e8b53b66132cbd2e0141ded41b226415cfdbbcf8f6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQGcBAEBCAAGBQJVKNj6AAoJEJQzkH1pP7W445gMAKQwpFcD348Rg3w6Er8qh1F2
-haM+6PqAFidVslLMHf0vC/nvARf+E7LsUh2C9dgjcvW7pDnoxnhCXMHWMY66GrFy
-a6AD4AF146K2m3xRJi6RE8cRrZGqqzTTXSgUUa6ZFFYSVqqGS5PC8RTawg5AqlUX
-Pr+a7gn4lmTtTEuhinN/r8Ahr6QBnPOD3HdqJnVIQtGup3aSPPYBPo3JI1klxmbN
-SZm3oDc3b2pVQtwaDs+W9wDiYrBN25lhksdnlgqJ+xt+bV7POIBvAqNpTX4XVw7J
-PkIbbylEwqbE/WrK0/QA+QsVMM2drVb3Tsx91Tq9M2JUqx+yDFB2lnvdyNlXNc/g
-ORR7KywD6sC/14dX0xI2JVGAJKnlw3xA13vzIGEquPNf03G0b7zYMUIa+PnAXzR5
-zrPnVVgZJ/YPzuOkiBOyQXMPuz/pAAkT18LyYg1QzLHjNFQ8by07SQHYu4qFQEfZ
-DOeLEvJlW9jM94/s/Qt90nInpU5THMyyVWZsLdKSBw==
-=q0O9
+iQGcBAEBCAAGBQJVKQp8AAoJEJQzkH1pP7W4FJAL/39KbCut74cxCtdnbdxTTlKA
+raI6WzxDqidcVRilsCkhvJzRgQXZLxXkA7ZvNlOHCT03XznxrrPT4Ag05LhaWLXf
+epcHFS4wgU/bmlmDwUkmcB75DR8bQWPub7BKvJnWdbVXomEgdknLuyVzQv0gSOsM
+h0VZdkFTeXvc6XcBDtVphw2ws7FJsQioh2H72obnFCM1KssIxGS649S4XmMMz6Ea
+zwyJ12WWOs0TRcsqmPjUVGJsKx2iuphd/QINpW7Yk8IGfToLXKEvZNeW5+FKxQ1L
+WfkA1kUh0Rjhsej7P+xximajwi+BgVaq17Zue3SOIR81q9O3IuSAtQpsp3DnZ1oF
+moe4cPoKPiT5vAiP6AU31gF6oxkkhSLIQ6MYiT6zAQSu5T3z63XOfW19statfHqU
+9xXfsMW4E4tctD3YJZIlxOnfjwKSoAyIW4LyyTSRHfq96u0Wx6xnkONbGodVnutb
+bKYHe63LyIkL04mTgkkTYYPIR5xBwgdqMZP1JiNyGQ==
+=rknr
 -----END PGP SIGNATURE-----
