@@ -5,8 +5,8 @@ EAPI=5
 HOMEPAGE=http://www.gnu.org/software/emacs/
 IUSE=acl alsa aqua athena dbus games gconf gfile gif gnutls gpm gsettings gtk +gtk3 gzip-el hesiod imagemagick +inotify jpeg kerberos libxml2 livecd m17n-lib motif pax_kernel png selinux sound source svg tiff toolkit-scroll-bars wide-int X Xaw3d xft +xpm zlib
 LICENSE=GPL-3+ FDL-1.3+ BSD HPND MIT W3C unicode PSF-2
-RDEPEND=sys-libs/ncurses >=app-eselect/eselect-emacs-1.16 >=app-emacs/emacs-common-gentoo-1.4-r1[games?,X?] net-libs/liblockfile acl? ( virtual/acl ) alsa? ( media-libs/alsa-lib ) dbus? ( sys-apps/dbus ) gfile? ( >=dev-libs/glib-2.28.6 ) gnutls? ( net-libs/gnutls ) gpm? ( sys-libs/gpm ) hesiod? ( net-dns/hesiod ) kerberos? ( virtual/krb5 ) libxml2? ( >=dev-libs/libxml2-2.2.0 ) selinux? ( sys-libs/libselinux ) zlib? ( sys-libs/zlib ) X? ( x11-libs/libXmu x11-libs/libXt x11-misc/xbitmaps gconf? ( >=gnome-base/gconf-2.26.2 ) gsettings? ( >=dev-libs/glib-2.28.6 ) gif? ( media-libs/giflib ) jpeg? ( virtual/jpeg:0= ) png? ( >=media-libs/libpng-1.4:0= ) svg? ( >=gnome-base/librsvg-2.0 ) tiff? ( media-libs/tiff:0 ) xpm? ( x11-libs/libXpm ) imagemagick? ( >=media-gfx/imagemagick-6.6.2 ) xft? ( media-libs/fontconfig media-libs/freetype x11-libs/libXft m17n-lib? ( >=dev-libs/libotf-0.9.4 >=dev-libs/m17n-lib-1.5.1 ) ) gtk? ( gtk3? ( x11-libs/gtk+:3 ) !gtk3? ( x11-libs/gtk+:2 ) ) !gtk? ( motif? ( >=x11-libs/motif-2.3:0 ) !motif? ( Xaw3d? ( x11-libs/libXaw3d ) !Xaw3d? ( athena? ( x11-libs/libXaw ) ) ) ) ) !=app-editors/emacs-24.5*
+RDEPEND=sys-libs/ncurses >=app-eselect/eselect-emacs-1.16 >=app-emacs/emacs-common-gentoo-1.4-r1[games?,X?] net-libs/liblockfile acl? ( virtual/acl ) alsa? ( media-libs/alsa-lib ) dbus? ( sys-apps/dbus ) gfile? ( >=dev-libs/glib-2.28.6 ) gnutls? ( net-libs/gnutls ) gpm? ( sys-libs/gpm ) hesiod? ( net-dns/hesiod ) kerberos? ( virtual/krb5 ) libxml2? ( >=dev-libs/libxml2-2.2.0 ) selinux? ( sys-libs/libselinux ) zlib? ( sys-libs/zlib ) X? ( x11-libs/libXmu x11-libs/libXt x11-misc/xbitmaps gconf? ( >=gnome-base/gconf-2.26.2 ) gsettings? ( >=dev-libs/glib-2.28.6 ) gif? ( media-libs/giflib ) jpeg? ( virtual/jpeg:0= ) png? ( >=media-libs/libpng-1.4:0= ) svg? ( >=gnome-base/librsvg-2.0 ) tiff? ( media-libs/tiff:0 ) xpm? ( x11-libs/libXpm ) imagemagick? ( >=media-gfx/imagemagick-6.6.2 ) xft? ( media-libs/fontconfig media-libs/freetype x11-libs/libXft m17n-lib? ( >=dev-libs/libotf-0.9.4 >=dev-libs/m17n-lib-1.5.1 ) ) gtk? ( gtk3? ( x11-libs/gtk+:3 ) !gtk3? ( x11-libs/gtk+:2 ) ) !gtk? ( motif? ( >=x11-libs/motif-2.3:0 ) !motif? ( Xaw3d? ( x11-libs/libXaw3d ) !Xaw3d? ( athena? ( x11-libs/libXaw ) ) ) ) )
 REQUIRED_USE=?? ( aqua X )
 SLOT=24
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	elisp-common	1aa23b3de5dae55456fa2071428eb5bf	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	git-r3	3a2bd0ae504c33a50061885480f3def3	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	readme.gentoo	106edea5533517715013de909a333abd	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
-_md5_=b2081294a926258b915c00e9a13fe21e
+_md5_=164856546a5edf5ed006b3cec5c4b498
