@@ -1,0 +1,10 @@
+DEFINED_PHASES=compile install postinst postrm prepare unpack
+DEPEND=dev-vcs/git >=sys-apps/policycoreutils-2.0.82 >=sec-policy/selinux-base-policy-9999 sys-devel/m4 >=sys-apps/checkpolicy-2.0.21
+DESCRIPTION=SELinux policy for uWSGI
+EAPI=5
+HOMEPAGE=https://wiki.gentoo.org/wiki/Project:SELinux
+LICENSE=GPL-2
+RDEPEND=>=sys-apps/policycoreutils-2.0.82 >=sec-policy/selinux-base-policy-9999
+SLOT=0
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	git-2	e28f0d8a9b321431b1e699782851b827	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	selinux-policy-2	a6753968a2a6567cd31154d6428719c7	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
+_md5_=422a5c4b6baf76d04f2727110c181650
