@@ -1,0 +1,25 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+EBUILD selinux-uwsgi-9999.ebuild 407 SHA256 4ea28ca6db648c2680e2fc694680ff5d1142a362ffdf49f24519fdb7a5d2e09b SHA512 bbd5515434bc506f42bb47dc06608bdf5577a494a82e1ec0f48bf0aaacbdf1e86c93e7c0cd7cbc4de8092bf03ff388be9e092cb0a4380a40d891309d103a6ca0 WHIRLPOOL 0e47654cfbf576239a91afac2e80fe3156317b6f70ed254dad267194cc20c3abbda894b5481d4690fefa0c5f8d35dea5c0549ddc7604c4907e33802b100f1622
+MISC ChangeLog 354 SHA256 dad771fb566949bba8fec2cadada473c42d48161cf540e94d55165a9d4c76656 SHA512 c7b191b1b8db58b30f2a980fd631a0d442d5dc80ba963063d9124cd037fff8896722b5651af898ac4f53b029f9906ba8879c66ee470a2572db5b2eeea8a54de1 WHIRLPOOL 13f5a0f41bc9e9cb84ba43c00982ec0e48c2e8490696d1abe1ed3c4979f42c69996577489c0f4f4a71da448f8ed67a36f45ab440de11774157599ed4d6b914d1
+MISC metadata.xml 229 SHA256 443b3506aa595afee40605ceebbd497778c615978dad5449ea6c7fa0eb00f4f6 SHA512 8ad6148b5d419c4f7c147920fab8c7c86b032f738e6af31c60836869508ab07cc4f53b7069620d7795f475d2d5a576f7cdf290e260904e3a2e6f624626e4d1d9 WHIRLPOOL 7b71603beb8abf104070552f1522ae6151ed50d02e849143808fc15c0789c5952d68191ad7bc24137a4e58a5a3e02c1c0b7c145ad6970d189019f7c92c72d731
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCABmBQJVKQtyXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRFMTYyREVBRDFDQ0REMTEzRjA0QjNENDky
+QkJFRDlDQjFBNjhFRjU1AAoJECu+2csaaO9VcPwP/AwLtT1oUHDj/U75jSdWXiMV
+DwmQn1jIybdnJpZ3l869Jz0mKF88eDKcqBySRVNVESWEOq5TmoIM1Im4NW7DCNa+
+XA7/9WGmUUZhxO1ZTop/UJ4V1jnTUhhIeFOPxEER1a5suRipWxZp0XCPRWOj8Biv
+d9BVyRUwXA0bUY0ajmMI5Abbg6RDmXFL1immVqpQRtWfRC7+z09p+JhfWTVapRQ5
+zkRPIcpwmCOo19iU29OE62JPxyGu9LN1CTGVSxHeCSz0BPzl1TJSRnWKTh+VU2tU
+VraryCdIKjeyEQgP8CwTgm6WSe2G5KOOzPPAkNIZyYhHTzbVs9rxspthICWorii8
+69gaUD9UCS9SFSCXNBGkMj+nWSDlo52xD7iT7ZoTsAsoCtTiwLUN5DeVZWZqox2t
+7+fVU+lKgaGxrWYBY4eFpH6V26rq1aqDjhqMIm7U+Y2Fu7CArnLhd+maDsl3EaFw
+ySVmrkV7awZSN4HTNOHP93IqK87RYJdqU0NF20ZIqqb5mhH2ewYVsyqVFTnFf+yv
+96A6gdb0v45NBBsgNYM24Da8qb3mP2hyINmdUh4DSXyMO7MQSC1SAGNeuTFfzUtx
+UQDaT/JKTUHdHPT0Vqr9w9iRG059hoLpE7s7LoPphG/ttQ/G5yta29+piTB3+gYa
+84mSVsfWmblbqA39q6T5
+=C8Ap
+-----END PGP SIGNATURE-----
