@@ -1,27 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/jekyll-gist/jekyll-gist-1.1.0.ebuild,v 1.2 2014/11/21 11:01:48 mrueg Exp $
-
-EAPI=5
-USE_RUBY="ruby19 ruby20 ruby21"
-
-RUBY_FAKEGEM_RECIPE_TEST="rspec"
-RUBY_FAKEGEM_TASK_DOC=""
-RUBY_FAKEGEM_EXTRADOC="README.md History.markdown"
-
-inherit ruby-fakegem
-
-DESCRIPTION="Liquid tag for displaying GitHub Gists in Jekyll sites"
-HOMEPAGE="https://github.com/jekyll/jekyll-gist"
-SRC_URI="https://github.com/jekyll/${PN}/archive/v${PV}.tar.gz -> ${P}.tar.gz"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="~amd64"
-IUSE=""
-
-ruby_add_bdepend "test? ( >=www-apps/jekyll-2 )"
-
-all_ruby_prepare() {
-	rm Rakefile || die
-}
