@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/jekyll-gist
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/jekyll-gist/ChangeLog,v 1.3 2015/03/27 20:27:37 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/jekyll-gist/ChangeLog,v 1.4 2015/04/11 11:41:59 mrueg Exp $
+
+  11 Apr 2015; Manuel Rüger <mrueg@gentoo.org> -jekyll-gist-1.1.0.ebuild:
+  Remove old.
 
 *jekyll-gist-1.2.1 (27 Mar 2015)
 
